# mansa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: cd-pipeline.yaml  ci-pipeline.yaml
.pipelines/: ci-lint.yaml  ci-pipeline.yaml
mansa/: config.toml  linter.py  logger.py
tests/: test_linter.py
